Fixed sidebar 'jumping' or overlapping near header and footer

--- a/tkt_theme_files/assets/less/tk-content-subnavigation.less
+++ b/tkt_theme_files/assets/less/tk-content-subnavigation.less
@@ -1,17 +1,11 @@
-.widget-area:before {
-  background-color: @backgroundColor;
+.widget-area{
+  padding-left: 40px;
+  &:before {
+    //background-color: @backgroundColor;
+  }
 }
 
 aside {
-  /*h3 {
-    font-family: Oswald, sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    line-height: 37px;
-    letter-spacing: 3px;
-    color: @mainColor;
-    text-transform: uppercase;
-  }*/
 
   .tk-hr {
     height: 3px;
